--- a/index.html
+++ b/index.html
@@ -6,20 +6,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Games Shop - a sua loja de games</title>
   <link rel="stylesheet" href="./style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav>
-      <h1>Games Shop</h1>
-      <ul>
-        <li>
-          <a href="#">Sobre a loja</a>
-        </li>
-        <li>
-         <a href="#">Contato</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="container">
+        <h1>Games Shop</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about">Sobre a loja</a>
+          </li>
+          <li>
+            <a href="#contact">Contato</a>
+          </li>
+        </ul>
+        </nav>
+    </div>
   </header>
+    <section id="about">
+      <div class="container">
+        <img class="store-front" src="./assets/loja.jpg" alt="A frente de uma Loja de Jogos">
+        <div>
+          <h2>Sobre a loja</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam corporis voluptate dolorum accusantium aliquid quis delectus impedit. Fugiat tempora aperiam reprehenderit molestias non, debitis sequi, cumque deleniti ipsa ipsum saepe.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam corporis voluptate dolorum accusantium aliquid quis delectus impedit. Fugiat tempora aperiam reprehenderit molestias non, debitis sequi, cumque deleniti ipsa ipsum saepe.
+          </p>
+          <ul class="brads-list">
+            <li><img src="./assets/nintendo.png" alt="Nintendo"></li>
+            <li><img src="./assets/xbox.png" alt="Xbox"></li>
+            <li><img src="./assets/playstation.png" alt="playstation"></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+      <h2>Contato</h2>
+      <div class="contact-metods">
+        <div>
+          <h3>Fale conosco</h3>
+          <form>
+            <input type="text" placeholder="Seu nome" required>
+            <input type="email" placeholder="Seu email" required>
+            <input type="tel" placeholder="Seu telefone(opicional)">
+            <textarea placeholder="Sua mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+        <div>
+          <h3>Nos acompanhe</h3>
+          <ul class="social">
+            <li>
+              <a href="#" title="Siga-nos no instragram">
+                <img src="./assets/instagram.png" alt="Logo do instagram">
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Siga-nos no facebook">
+                <img src="./assets/facebook.png" alt="Logo do facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Visite o nosso canal no youtube">
+                <img src="./assets/youtube.png" alt="Logo do youtube">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>Venha até nós</h3>
+          <p>
+            Rua JavaScript, n° 123, bairro HTML, São Paulo - SP
+          </p>
+        </div>
+      </div>
+    </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>
+          &copy; Games Shop - Todos os direitos reservados - 2022
+        </p>
+      </div>
+    </footer>
 </body>
 </html>
